# doc/api.yaml
@@ -693,6 +693,13 @@ components:
           type: integer
           example: 12345678
           readOnly: true
+        username:
+          description: The username of the User who posted the Comment
+          type: string
+          example: "Maria"
+          pattern: '^.*?$'
+          minLength: 3
+          maxLength: 16
         photoID:
           description: The unique identifier of the Photo target
           type: integer
